Bug 153958 - Hyphenation crashes with special combined word
Summary: Hyphenation crashes with special combined word
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.7.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.3.2 target:7.4.7
Keywords: haveBacktrace
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2023-03-04 09:58 UTC by Hinrich Ruprecht
Modified: 2023-04-18 03:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Test case for bug (11.66 KB, application/vnd.oasis.opendocument.text)
2023-03-05 15:16 UTC, Hinrich Ruprecht
Details
gdb bt (13.13 KB, text/plain)
2023-03-06 12:52 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hinrich Ruprecht 2023-03-04 09:58:05 UTC
The hyphenation crashes without an error message for the following text:

In den ersten Semesterferien besuchte mich Bundesbruder Heinz Pfleging aus Kassel in Eckw.-Altendeich. 

The line breaks already at the hyphen before "Altendeich".
Eckw is an abbreviation, therefore the dot. 
Without the dot after "Eckw", the hyphenation goes through.

Workaround: hyphen replaced by Ctrl+-
Comment 1 Julien Nabet 2023-03-04 12:36:32 UTC
On which Linux distrib are you?
Would it be possible you try last stable LO version 7.4.5 + apply https://wiki.documentfoundation.org/QA/FirstSteps#Corrupted_user_profile ?
Comment 2 Julien Nabet 2023-03-04 19:58:46 UTC
Hinrich: please respond on the bugtracker so all information are in the bugtracker and people can consult them and may help.

Info received by email:
the distro is Ubuntu 22.04.2 LTS, and LO version 7.4.5.1 also crashes immediately after starting hyphenation. 

Ok so you can try to rename your LO directory profile (see  https://wiki.documentfoundation.org/QA/FirstSteps#Corrupted_user_profile) and give a new try?

Just for the record, I gave a try on pc Debian x86-64 with master sources updated today and after having changed UI to German, I don't reproduce the crash. Now perhaps I missed something.
Comment 3 Hinrich Ruprecht 2023-03-05 15:16:41 UTC
Created attachment 185771 [details]
Test case for bug
Comment 4 Hinrich Ruprecht 2023-03-05 15:20:47 UTC
The crash report can be found at:
https://crashreport.libreoffice.org/stats/crash_details/771faf6e-20a1-455f-8dc4-f7ff733aeacc

The distro is Ubuntu 22.04.2 LTS, and LO version 7.4.5.1 also crashes immediately after starting hyphenation.
Comment 5 Julien Nabet 2023-03-05 20:12:38 UTC
Once I open the provided file, what precise steps must I do to reproduce the crash?
Comment 6 Hinrich Ruprecht 2023-03-06 09:40:29 UTC
To reproduce: set language to German, then start hyphenation.
Comment 7 Julien Nabet 2023-03-06 12:52:05 UTC
Created attachment 185794 [details]
gdb bt

Thank you for the last feedback.

On pc Debian x86-64 with master sources updated today, I got an assertion.
Comment 8 Commit Notification 2023-04-16 18:43:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/80a0d3b44cd6edb6419ab66588548ba169f2567b

Resolves: tdf#153958 Hyphenation crashes with -Alte...

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2023-04-16 18:44:10 UTC
done in trunk, backport to 7-5 in gerrit
Comment 10 Commit Notification 2023-04-17 04:51:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/7584e403d57097ed4cc2d827d68895ec35cf805f

Resolves: tdf#153958 Hyphenation crashes with -Alte...

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-04-17 12:19:40 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/a6cd712ddeb1fc3a9cc5568d5e2f4eac9f8fcc2f

Resolves: tdf#153958 Hyphenation crashes with -Alte...

It will be available in 7.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-04-17 12:20:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-3":

https://git.libreoffice.org/core/commit/8ecccc379477def5085743d2b024bb99eba0ebc8

Resolves: tdf#153958 Hyphenation crashes with -Alte...

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.