Resolves: tdf#153958 Hyphenation crashes with -Alte...

nPos2 is 0 due to the -, so aLeft is empty, nPos is set to 0
then incremented to 1, aLeft.replaceFirst is run after its end pos
so crashes/asserts. Presumably we can do nothing meaningful here
so skip if nPos2 is 0

Change-Id: I09754c4b2567fe5c1b4c36de0b36ee99f575244d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150327
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>